fixed spacing of results boxes

--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -136,8 +136,7 @@ button:focus {
 } */
 
 .answer-container {
-  margin-top: 30px;
-
+  margin-top: 100px;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px;
@@ -180,8 +179,8 @@ img {
   background-color: #f0f0f0;
   border: 1px solid #ccc;
   padding: 20px;
-  margin-top: 5px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 50px;
   border-radius: 5px;
   text-align: center;
   width: 600px;
